--- a/SentimentBasedProductRecommendation.ipynb
+++ b/SentimentBasedProductRecommendation.ipynb
@@ -51,32 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\balaji\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\balaji\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\balaji\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\balaji\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\balaji\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NLTK libraries\n",
     "import nltk\n",
@@ -36138,7 +36115,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://sentiment-based-product-dab83e281f7a.herokuapp.com/\n"
+   ]
   }
  ],
  "metadata": {
